joggling files around

--- a/test/suite.html
+++ b/test/suite.html
@@ -68,25 +68,23 @@
                 
     </script>
 
-	<!-- Test classes (data structures) -->
-	<script src="data-structures/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-structures/CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-structures/RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-structures/LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
-
     <!-- Interfaces -->
-    <script src="data-types/Collection.js" type="text/javascript" charset="utf-8"></script>
-    <script src="data-types/Extensible.js" type="text/javascript" charset="utf-8"></script>
-    <script src="data-types/Sequenced.js" type="text/javascript" charset="utf-8"></script>
+    <script src="Collection.js" type="text/javascript" charset="utf-8"></script>
+    <script src="Extensible.js" type="text/javascript" charset="utf-8"></script>
+    <script src="Sequenced.js" type="text/javascript" charset="utf-8"></script>
     
-	<!-- Test classes (data types) -->
-    <script src="data-types/Option.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-types/List.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-types/Stack.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-types/Queue.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-types/Set.js" type="text/javascript" charset="utf-8"></script>
-	<script src="data-types/Map.js" type="text/javascript" charset="utf-8"></script>
-    <script src="data-types/Multimap.js" type="text/javascript" charset="utf-8"></script>
+    <!-- Data structures -->
+    <script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
+	<script src="LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
+    <script src="Option.js" type="text/javascript" charset="utf-8"></script>
+	<script src="List.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Set.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Map.js" type="text/javascript" charset="utf-8"></script>
+    <script src="Multimap.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
