Mass commit. More interfaces, more tests

--- a/test/suite.html
+++ b/test/suite.html
@@ -18,8 +18,9 @@
 
     <script>
         mugs.basePath = "../bin/";
-        mugs.require("mugs.Collection")
-        mugs.require("mugs.Extensible")
+        mugs.require("mugs.Collection");
+        mugs.require("mugs.Extensible");
+        mugs.require("mugs.Indexed");
         mugs.require("mugs.Some");
         mugs.require("mugs.None");
         mugs.require("mugs.List");
@@ -71,7 +72,9 @@
     <!-- Interfaces -->
     <script src="Collection.js" type="text/javascript" charset="utf-8"></script>
     <script src="Extensible.js" type="text/javascript" charset="utf-8"></script>
+    <script src="Indexed.js" type="text/javascript" charset="utf-8"></script>
     <script src="Sequenced.js" type="text/javascript" charset="utf-8"></script>
+    <script src="Directed.js" type="text/javascript" charset="utf-8"></script>
     
     <!-- Data structures -->
     <script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
