more tests and methods. Also moving things around

--- a/test/suite.html
+++ b/test/suite.html
@@ -70,11 +70,11 @@
     </script>
 
     <!-- Interfaces -->
-    <script src="Collection.js" type="text/javascript" charset="utf-8"></script>
-    <script src="Extensible.js" type="text/javascript" charset="utf-8"></script>
-    <script src="Indexed.js" type="text/javascript" charset="utf-8"></script>
-    <script src="Sequenced.js" type="text/javascript" charset="utf-8"></script>
-    <script src="Directed.js" type="text/javascript" charset="utf-8"></script>
+    <script src="interfaces/Collection.js" type="text/javascript" charset="utf-8"></script>
+    <script src="interfaces/Extensible.js" type="text/javascript" charset="utf-8"></script>
+    <script src="interfaces/Indexed.js" type="text/javascript" charset="utf-8"></script>
+    <script src="interfaces/Sequenced.js" type="text/javascript" charset="utf-8"></script>
+    <script src="interfaces/Directed.js" type="text/javascript" charset="utf-8"></script>
     
     <!-- Data structures -->
     <script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
