--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Mugs
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<link rel="stylesheet" href="http://mads379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <!-- <link rel="stylesheet" href="http://mads379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
 	<link rel="stylesheet" href="file:///Users/Mads/dev/projects/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
 	<script src="http://mads379.github.com/mugs/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -31,8 +31,8 @@ title: Mugs
 		}
 
 		$('#evaluate').bind('click',function() {
-      var code = $('#editor').val()
-      alert(eval(wrapInFunction(code)));
+            var code = $('#editor').val()
+            alert(eval(wrapInFunction(code)));
 		});
 
 	};
@@ -40,30 +40,68 @@ title: Mugs
 </head>
 
 
-<div id="container" >
-
-  <h1 class="header">Mugs</h1>
-  <h2>Immutable Collections Library for Javascript</h2>
-
-  <div id="content" class="clearfix">
-
-    <h3>About</h3>
-
-    <p><strong>Under development.</strong></p>
-
-    <p>Mugs is an immutable collections library for JavaScript</p>
-
-  <!-- <p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
+<div id="container">
+    <div id="header">
+        <img src="images/logo.png" id="logo" />
+        <img src="images/mug.png" id="mug">
+        <h1>Mugs</h1>
+        <h2>Immutable collections library for JavaScript</h2>
+    </div>
+    <div id="content" class="clearfix">
+        <center>
+            <strong>Still very much under development so no source has been released yet. <br /> If you're interested mail me at mahj@itu.dk</strong>
+        </center>
+        <h3>
+            About
+        </h3>
+        <p>Mugs is an immutable collections library for JavaScript that consists of a powerful set of collection prototypes that will make it more natural to write JavaScript programs in a functional manner using features like higher-order functions. By functional programs I'm referring to programs that are referential transparent which it isn't possible to write if you only have mutable collections at your possession.</p>
+        <!-- <img src="images/collections.png" id="collections_img"/>
+        <img src="images/maps.png" id="maps_img"/> -->
+        <p>The library contains the following collections.</p>
+        <ul>
+            <li><strong>List</strong> a List contains a sequence of items in the order they were inserted.</li>
+            <li><strong>Stack</strong> A stack inserts and retrieves items according to the last-in-first-out (LIFO) principle.</li>
+            <li><strong>Queue</strong> A queue inserts and retrieves items according to the first-in-first-out (FIFO) principle.</li>
+            <li><strong>TreeSet</strong> Set contains a sequence of items. The Set has the property that no item may appear twice. </li>
+            <li><strong>LLRBSet</strong> a TreeSet based on a Left-Left Red Black Tree</li>
+            <li><strong>HashSet</strong> a Set based on hashing</li>
+            <li><strong>TreeMap</strong> a map stores items according to a given key.</li>
+            <li><strong>LLRBMap</strong> a TreeMap based on a Left-Leaning Red Black Tree</li>
+            <li><strong>HashMap</strong> a Map based on hashing</li>
+            <li><strong>Multimap</strong> a Multimap is a map where each key is associated with a collection rather than a single item. The user is free to use any of the collections that implements the Extensible interface.</li>
+            <li><strong>Random Access List</strong> a Random Access List is a List that supported fast retrieval of items stored at arbitrary positions in the List. </li>
+        </ul>
+        <p>The collections have been developed with the following "interfaces" in mind.</p>
+        <ul>
+            <li><strong>Collection</strong> Is the base interface that all collections implements.  </li>
+            <li><strong>Extensible</strong> Is a collection with support for insertion and removal of items. </li> 
+            <li><strong>Indexed</strong> is a collection where the items can be accessed with an index</li>
+            <li><strong>Sequenced</strong> is an collection whose items are stored in a sequence determined but an ordering of the items or the insertion order</li>
+            <li><strong>Directed</strong> are for collections that have a sense of direction. This means they support operations like reverse, foldLeft and foldRight (amongst others) that require a sense of direction.</li>
+            <li><strong>Map</strong> is a collection that associates a key with a single item.</li>
+            <li><strong>Multimap</strong> is a collection that associates a key with a collection of items. The items can be stored in an Extensible collection specified by the user upon construction of the Multimap.</li>
+            <li><strong>SortedMap</strong> is a Map where the keys are stored in a sorted order</li>
+        </ul>
+        <p>The following resources have been used to implement the various data structures</p>
+        <ul>
+            <li><a href="http://www.google.com/books?id=SxPzSTcTalAC&dq=Purely+Functional+Data+Structures&lr=&hl=da&source=gbs_navlinks_s">Purely Functional Data Structures</a> by Chris Okasaki's book has been used to implement the Red Black Tree and Queue</li>
+            <li><a href="http://www.cs.princeton.edu/~rs/talks/LLRB/LLRB.pdf" target="_blank">Left-leaning Red-Black Trees</a> by Robert Sedgewick has been used to implement the Left-Leaning Red Black Tree</li>
+            <li><a href="http://www.eecs.usma.edu/webs/people/okasaki/pubs.html#fpca95" target="_blank">Purely Functional Random-Access List</a> by Chris Okasaki has beed used to implement the Random Access List</li>
+        </ul>
+        
+        </p><!-- <p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
 
        <p>The library is written in Coffeescript[1], a small language that compiles to JavaScript, as it adds a few semantics simplifies the code.</p>
 
   <p>This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.</p> -->
-
-  <h3>Try it out</h3>
-  <p>You can try out the different collection classes by typing javascript in the textarea below and hitting 'Evaluate' button.</p>
-
-
-  <textarea id="editor">var list = new mugs.List([1,2,3,4,5,6,7,8,9,10]);
+        <h3>
+            Try it out
+        </h3>
+        <p>
+            You can try out the different collection classes by typing javascript in the textarea below and hitting 'Evaluate' button.
+        </p>
+        <textarea id="editor">
+var list = new mugs.List([1,2,3,4,5,6,7,8,9,10]);
 
 var add = function(x,y) {
     return x + y ;
@@ -71,24 +109,21 @@ var add = function(x,y) {
 
 var sum = list.foldLeft(0)( add );
 
-return sum;</textarea>
-  <button type="submit" id="evaluate">Evaluate</button>
-
-  <h3>Getting started</h3>
-
-<!-- <h2>Getting the code</h2>
+return sum;
+</textarea> <button type="submit" id="evaluate">Evaluate</button>
+        <h3>
+            Getting started
+        </h3><!-- <h2>Getting the code</h2>
 
 <p>You can download this project in either <a href="http://github.com/mads379/mugs/zipball/master">zip</a> or <a href="http://github.com/mads379/mugs/tarball/master">tar</a></p>
 
 <p>You can also clone the project with <a href="http://git-scm.com">Git</a> by running:<pre>$ git clone git://github.com/mads379/mugs</pre></p>
 
 <p>get the source code on <a href="http://github.com/mads379/mugs">GitHub</a>.</p> -->
+    </div>
+    <div id="footer">
+        <p>
+            Mugs has been developmed by Mads Hartmann Jensen and is the product of his Bachelors project
+        </p>
+    </div>
 </div>
-
-  <div id="footer">
-    <p>Mugs has been developmed by Mads Hartmann Jensen and is the product of his Bachelors project</p>
-  </div>
-</div>
-
-
-</html>
