--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Mugs
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <!-- <link rel="stylesheet" href="http://mads379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
-	<link rel="stylesheet" href="file:///Users/Mads/dev/projects/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="http://mads379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <!-- <link rel="stylesheet" href="file:///Users/Mads/dev/projects/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
 
 	<script src="http://mads379.github.com/mugs/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="http://mads379.github.com/mugs/bin/Mugs.js" type="text/javascript" charset="utf-8"></script>
