small header changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Mugs
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="http://mads379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="http://mads379ds379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
     <!-- <link rel="stylesheet" href="file:///Users/Mads/dev/projects/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
 
 	<script src="http://mads379.github.com/mugs/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -51,12 +51,10 @@ title: Mugs
         <center>
             <strong>Still very much under development so no source has been released yet. <br /> If you're interested mail me at mahj@itu.dk</strong>
         </center>
-        <h3>
-            About
-        </h3>
         <p>Mugs is an immutable collections library for JavaScript that consists of a powerful set of collection prototypes that will make it more natural to write JavaScript programs in a functional manner using features like higher-order functions. By functional programs I'm referring to programs that are referential transparent which it isn't possible to write if you only have mutable collections at your possession.</p>
         <!-- <img src="images/collections.png" id="collections_img"/>
         <img src="images/maps.png" id="maps_img"/> -->
+        <h3>Collections</h3>
         <p>The library contains the following collections.</p>
         <ul>
             <li><strong>List</strong> a List contains a sequence of items in the order they were inserted.</li>
