no need for clearfix

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Mugs
         <h1>Mugs</h1>
         <h2>Immutable collections library for JavaScript</h2>
     </div>
-    <div id="content" class="clearfix">
+    <div id="content">
         <center>
             <strong>Still very much under development so no source has been released yet. <br /> If you're interested mail me at mahj@itu.dk</strong>
         </center>
