--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ title: Mugs
             Try it out
         </h3>
         <p>
-            You can try out the different collection classes by typing javascript in the textarea below and hitting 'Evaluate' button.
+            You can try out the different collection classes by typing javascript in the textarea below and hitting 'Evaluate' button. 
         </p>
         <textarea id="editor">
 var list = new mugs.List([1,2,3,4,5,6,7,8,9,10]);
@@ -110,7 +110,9 @@ return sum;
 </textarea> <button type="submit" id="evaluate">Evaluate</button>
         <h3>
             Getting started
-        </h3><!-- <h2>Getting the code</h2>
+        </h3>
+        <p>Not ready for use yet, sorry</p>
+        <!-- <h2>Getting the code</h2>
 
 <p>You can download this project in either <a href="http://github.com/mads379/mugs/zipball/master">zip</a> or <a href="http://github.com/mads379/mugs/tarball/master">tar</a></p>
 
