woops, require calls in the lib aren't updated. Fix for now

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@ title: Mugs
 
   <script>
     mugs.basePath = "http://mads379.github.com/mugs/bin/"
-    mugs.require("mugs.List")
-    mugs.require("mugs.TreeMap")
-    mugs.require("mugs.TreeSet")
-    mugs.require("mugs.RandomAccessList")
-    mugs.require("mugs.LLRBMap")
-    mugs.require("mugs.LLRBSet")
-    mugs.require("mugs.Stack")
-    mugs.require("mugs.Queue")
+    
+    mugs.require("mugs.Indexed");
+    
+    mugs.require("mugs.List");
+    mugs.require("mugs.TreeMap");
+    mugs.require("mugs.TreeSet");
+    mugs.require("mugs.RandomAccessList");
+    mugs.require("mugs.LLRBMap");
+    mugs.require("mugs.LLRBSet");
+    mugs.require("mugs.Stack");
+    mugs.require("mugs.Queue");
   </script>
 
 	<script>
