Added a mugs.range object that can create arrays

--- a/test/suite.html
+++ b/test/suite.html
@@ -23,6 +23,7 @@
         mugs.require("mugs.Indexed");
         mugs.require("mugs.Some");
         mugs.require("mugs.None");
+        mugs.require("mugs.range");
         mugs.require("mugs.List");
         mugs.require("mugs.TreeMap");
         mugs.require("mugs.TreeSet");
