--- a/examples/client-side/euler1.html
+++ b/examples/client-side/euler1.html
@@ -21,7 +21,7 @@
           return x % y === 0; 
         };
 
-        isMultipleOfThreeOrFive = function(x) {
+        var isMultipleOfThreeOrFive = function(x) {
           return isMultipleOf(x,3) || isMultipleOf(x,5);
         };
 
@@ -29,7 +29,9 @@
           return x+y;
         };
 
-        var sum = new mugs.List(mugs.range.until(0,1000)).filter(isMultipleOfThreeOrFive).foldLeft(0)(add);
+        var sum = new mugs.List(mugs.range.until(0,1000))
+                          .filter(isMultipleOfThreeOrFive)
+                          .foldLeft(0)(add);
 
         document.write("<h2>Answer: " + sum + "</h2>");
 
