Added missing tests. Now have 98% code coverage

--- a/test/suite.html
+++ b/test/suite.html
@@ -76,6 +76,8 @@
     <script src="interfaces/Indexed.js" type="text/javascript" charset="utf-8"></script>
     <script src="interfaces/Sequenced.js" type="text/javascript" charset="utf-8"></script>
     <script src="interfaces/Directed.js" type="text/javascript" charset="utf-8"></script>
+    <script src="interfaces/OrderedMap.js" type="text/javascript" charset="utf-8"></script> 
+    <script src="interfaces/OrderedSet.js" type="text/javascript" charset="utf-8"></script> 
     
     <!-- Data structures -->
     <script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
@@ -89,6 +91,9 @@
 	<script src="Set.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Map.js" type="text/javascript" charset="utf-8"></script>
     <script src="Multimap.js" type="text/javascript" charset="utf-8"></script>
+    <script src="HashMap.js" type="text/javascript" charset="utf-8"></script>
+    
+    <script src="Range.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
