missing semi-colon

--- a/examples/client-side/example.html
+++ b/examples/client-side/example.html
@@ -13,7 +13,7 @@
   <script src="../../bin/Mugs.js" type="text/javascript" charset="utf-8"></script>
   <script>
     mugs.basePath = "../../bin/";
-    mugs.require("mugs.List")
+    mugs.require("mugs.List");
   </script>
   <script>
     var add  = function(x,y){ return x+y; },
